# marble

./: CMakeLists.txt
cmake/modules/: FindOpenGLES.cmake  FindQtMobility.cmake
data/: CMakeLists.txt
data/shaders/: geometrylayer.fragment.glsl  geometrylayer.vertex-azimuthalequidistant.glsl  geometrylayer.vertex-equirectangular.glsl  geometrylayer.vertex-gnomonic.glsl  geometrylayer.vertex-lambertazimuthal.glsl  geometrylayer.vertex-mercator.glsl  geometrylayer.vertex-spherical.glsl  geometrylayer.vertex-stereographic.glsl  geometrylayer.vertex-verticalperspective.glsl  geometrylayer.vertex.glsl  placemarklayer.fragment.glsl  placemarklayer.vertex-azimuthalequidistant.glsl  placemarklayer.vertex-equirectangular.glsl  placemarklayer.vertex-gnomonic.glsl  placemarklayer.vertex-lambertazimuthal.glsl  placemarklayer.vertex-mercator.glsl  placemarklayer.vertex-spherical.glsl  placemarklayer.vertex-stereographic.glsl  placemarklayer.vertex-verticalperspective.glsl  placemarklayer.vertex.glsl  texturelayer.vertex-azimuthalequidistant.glsl  texturelayer.vertex-equirectangular.glsl  texturelayer.vertex-gnomonic.glsl  texturelayer.vertex-lambertazimuthal.glsl  texturelayer.vertex-mercator.glsl  texturelayer.vertex-spherical.glsl  texturelayer.vertex-stereographic.glsl  texturelayer.vertex-verticalperspective.glsl  texturelayer.vertex.glsl
examples/kml/: Overlay.kml
src/: CMakeLists.txt
src/apps/marble-mobile/: CMakeLists.txt  MobileMainWindow.cpp  MobileMainWindow.h
src/lib/: AbstractDataPlugin.cpp  AbstractDataPlugin.h  AbstractFloatItem.cpp  AbstractFloatItem.h  AbstractScanlineTextureMapper.cpp  CMakeLists.txt  CelestialBodiesSortFilterProxyModel.cpp  CelestialBodiesSortFilterProxyModel.h  EquirectScanlineTextureMapper.cpp  EquirectScanlineTextureMapper.h  GLRenderer.cpp  GLTextureMapper.cpp  GLTextureMapper.h  GeoGraphicsScene.cpp  GeoGraphicsScene.h  GeoPainter.cpp  GeoPainter.h  (+64 more)
src/plugins/qtlocation/: CMakeLists.txt  MarbleGeoMappingManagerEngine.cpp  MarbleGeoMappingManagerEngine.h  QtLocationPlugin.cpp  QtLocationPlugin.h
src/qt-components/marble-mobile/: CMakeLists.txt  MainPage.qml  MapSelectionDialog.qml  RoutingPage.qml  main.cpp  main.qml  main.qrc
tests/: AbstractDataPluginModelTest.cpp  AbstractDataPluginTest.cpp  BillboardGraphicsItemTest.cpp  CMakeLists.txt  GeoDataTreeModelTest.cpp  GeoUriParserTest.cpp  GnomonicProjectionTest.cpp  MarbleMapTest.cpp  MarbleRunnerManagerTest.cpp  MercatorProjectionTest.cpp  PluginManagerTest.cpp  PositionTrackingTest.cpp  RouteRequestTest.cpp  StereographicProjectionTest.cpp  TestCamera.cpp  TestEquality.cpp  TestFeatureDetach.cpp  TestGeoDataCoordinates.cpp  TestGeoDataCopy.cpp  TestGeoDataGeometry.cpp  TestGeoDataLatLonAltBox.cpp  TestGeoDataTrack.cpp  TestGeometryDetach.cpp  TestGroundOverlay.cpp  TestLatLonQuad.cpp  TestModel.cpp  TestTileProjection.cpp  TestUtils.h  TileIdTest.cpp  ViewportParamsTest.cpp
(+666 files in other folders)
